<resources>
    <string name="app_name">Help Desk</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="get_quick_responses">Get Quick Responses</string>
    <string name="simple_and_fast">Simple and Fast</string>
    <string name="help_desk">Help Desk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="get_started">Get Started</string>
    <string name="signup">Signup</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="no_account">Don’t have an account?</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="posted_question">Posted Question</string>
    <string name="faq">FAQ</string>
    <string name="logout">Logout</string>
    <string name="recent_posts">Recent Posts</string>
    <string name="flask">Flask</string>
    <string name="django">Django</string>
    <string name="spark">Spark</string>
    <string name="android">Android</string>
    <string name="python">Python</string>
    <string name="java">Java</string>
    <string name="javascript">Javascript</string>
    <string name="html">HTML</string>
    <string name="css">CSS</string>
    <string name="am_having_trouble_integrating_heroku">Am having trouble integrating Heroku...</string>
    <string name="am_having_trouble_integrating_heroku_with_python_flask">Am having trouble integrating Heroku with Python Flask</string>
    <string name="read_more">Read More...</string>
    <string name="post">post</string>
    <string name="post_a_question">Post a Question</string>
    <string name="title">Title</string>
    <string name="enter_question_s_title">Enter question\'s title</string>
    <string name="submit">Submit</string>
    <string name="eric_wathome">Eric Wathome</string>
    <string name="my_posts">My Posts</string>
    <string name="am_having_trouble_integrating_heroku_long">Am having trouble integrating Heroku with Python Flask. Am getting an Error while at it.</string>
    <string name="reply">Reply</string>
    <string name="responses">Responses</string>
    <string name="response_right_dependencies1">Make sure you have the right dependencies</string>
    <string name="_25">25</string>
    <string name="_12">12</string>
    <string name="title_activity_main_drawer">MainActivityDrawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="read_more_java">Read More...</string>
    <string name="search">Search</string>
    <string name="call">Call</string>
    <string name="is_your_app_for_sale">Is your app for sale?</string>
    <string name="our_app_is_free_to_use">Our app is free to use</string>
    <string name="how_do_i_post_a_question">How do I post a question</string>
    <string name="just_click_the_floating_add_button">Just click the floating add button</string>
    <string name="how_do_i_contact_moringaschool">How do I contact MoringaSchool?</string>
    <string name="we_have_their_contacts_above">We have their contacts above</string>
    <string name="technical">Technical</string>
    <string name="logical">Logical</string>
    <string name="other">Other</string>
    <string name="dismiss">Dismiss</string>
    <string name="enter_question">Enter Question</string>

    <string-array name="category">
        <item>Technical</item>
        <item>Logical</item>
        <item>Other</item>
    </string-array>

    <string-array name="language">
        <item>Java</item>
        <item>Python</item>
        <item>Javascript</item>
        <item>HTML</item>
        <item>CSS</item>
        <item>XML</item>
    </string-array>
</resources>