<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_back_button"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:paddingTop="12dp"
        android:paddingEnd="24dp">


        <ImageView
            android:id="@+id/logout_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_log_out"
            app:tint="@color/primaryVariant" />

        <TextView
            android:id="@+id/logout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/logout"
            android:textColor="@color/primaryVariant"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/logout_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/call_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@+id/logout_icon"
            app:layout_constraintTop_toBottomOf="@+id/logout_icon"
            app:srcCompat="@drawable/ic_phone"
            app:tint="@color/colorOnPrimary" />

        <TextView
            android:id="@+id/call_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:textColor="@color/colorOnPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/logout_text"
            app:layout_constraintTop_toTopOf="@+id/call_icon" />

        <ImageView
            android:id="@+id/mail_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@+id/call_icon"
            app:layout_constraintTop_toBottomOf="@+id/call_icon"
            app:srcCompat="@drawable/ic_mail"
            app:tint="@color/colorOnPrimary" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorOnPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/call_text"
            app:layout_constraintTop_toTopOf="@+id/mail_icon" />

        <TextView
            android:id="@+id/faq_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="72dp"
            android:text="@string/faq"
            android:textColor="@color/colorOnPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mail_icon" />

        <TextView
            android:id="@+id/faq_title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/is_your_app_for_sale"
            android:textColor="@color/colorOnPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/faq_heading"
            app:layout_constraintTop_toBottomOf="@+id/faq_heading" />

        <TextView
            android:id="@+id/faq_body_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/our_app_is_free_to_use"
            android:textColor="@color/colorOnPrimary"
            android:textSize="18sp"

            app:layout_constraintStart_toStartOf="@+id/faq_title_1"
            app:layout_constraintTop_toBottomOf="@+id/faq_title_1" />

        <TextView
            android:id="@+id/faq_title_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_do_i_post_a_question"
            android:textColor="@color/colorOnPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toTopOf="@+id/faq_body_2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/faq_body_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"

            android:text="@string/just_click_the_floating_add_button"
            android:textColor="@color/colorOnPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/faq_title_2"
            app:layout_constraintTop_toBottomOf="@+id/faq_body_1" />

        <TextView
            android:id="@+id/faq_title_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/how_do_i_contact_moringaschool"
            android:textColor="@color/colorOnPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/faq_body_2"
            app:layout_constraintTop_toBottomOf="@+id/faq_body_2" />

        <TextView
            android:id="@+id/faq_body_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_have_their_contacts_above"
            android:textColor="@color/colorOnPrimary"
            android:textSize="18sp"

            app:layout_constraintStart_toStartOf="@+id/faq_title_3"
            app:layout_constraintTop_toBottomOf="@+id/faq_title_3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>