<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LauncherActivity">


    <TextView
        android:id="@+id/help_desk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_desk"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@color/colorOnPrimary" />

    <TextView
        android:id="@+id/simple_and_fast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/help_desk"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/simple_and_fast"
        android:textColor="#039BE5"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/simple_and_fast"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:srcCompat="@drawable/support"
        tools:ignore="ImageContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/get_started"
        android:layout_width="match_parent"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/button_radius"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:text="@string/get_started" />


</RelativeLayout>