<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp">

        <TextView
            android:id="@+id/profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/posted_question"
            android:textColor="@color/colorOnPrimary"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:layout_toEndOf="@id/profile_title"
            android:drawablePadding="6dp"
            android:textColor="@color/colorOnPrimary"
            android:textSize="24sp"
            app:drawableStartCompat="@drawable/edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/title"
        android:layout_below="@+id/constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/am_having_trouble_integrating_heroku"
        android:textColor="@color/colorOnPrimary"
        android:textSize="18sp"
        android:layout_marginStart="24dp"/>

    <RelativeLayout
        android:id="@+id/body_container"
        android:layout_below="@+id/title"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_radius"
        android:padding="24dp">

        <TextView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/am_having_trouble_integrating_heroku_long"
            android:textColor="@color/colorOnPrimary"
            android:textSize="18sp"/>


    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_below="@+id/body_container"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:drawableStart="@drawable/send_icon"
        android:drawablePadding="6dp"
        android:minHeight="48dp"
        android:minWidth="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_radius"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:text="@string/reply" />

    <TextView
        android:id="@+id/responses_title"
        android:layout_below="@+id/button"
        android:layout_marginTop="60dp"
        android:layout_marginStart="24dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/responses"
        android:layout_marginBottom="24dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/posted_question_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/responses_title" />


</RelativeLayout>