<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recent_posts_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_marginTop="26dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/card_title"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:textColor="@color/primaryVariant"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/am_having_trouble_integrating_heroku" />

        <TextView
            android:id="@+id/card_body"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="18dp"
            android:textColor="@color/colorOnPrimary"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_title"
            android:text="@string/am_having_trouble_integrating_heroku_with_python_flask" />

        <TextView
            android:id="@+id/card_read_more"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="18dp"
            android:textColor="@color/primaryVariant"
            android:textSize="14sp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_body"
            android:text="@string/read_more" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>